Added auto percent calculation for image splitting based on desired aspect ratio by #2321

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -2043,4 +2043,5 @@
     <string name="normal">Normal</string>
     <string name="slow">Slow</string>
     <string name="very_slow">Very Slow</string>
+    <string name="compute_percents">Compute Percents</string>
 </resources>
