Added info about min value of aspect ratio side by #2435

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -2044,4 +2044,5 @@
     <string name="slow">Slow</string>
     <string name="very_slow">Very Slow</string>
     <string name="compute_percents">Compute Percents</string>
+    <string name="minimum_value_is">Min value is %1$s</string>
 </resources>
