Warp brush proposal

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -2045,4 +2045,6 @@
     <string name="very_slow">Very Slow</string>
     <string name="compute_percents">Compute Percents</string>
     <string name="minimum_value_is">Min value is %1$s</string>
+    <string name="warp_sub">Warp image in any direction by drawing</string>
+    <string name="warp">Warp</string>
 </resources>
