Improve Image Stitching tool by #2224

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -2054,4 +2054,5 @@
     <string name="warp_mode_shrink">Shrink</string>
     <string name="warp_mode_swirl_cw">Swirl CW</string>
     <string name="warp_mode_swirl_ccw">Swirl CCW</string>
+    <string name="fade_strength">Fade Strength</string>
 </resources>
