--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -2055,4 +2055,8 @@
     <string name="warp_mode_swirl_cw">Swirl CW</string>
     <string name="warp_mode_swirl_ccw">Swirl CCW</string>
     <string name="fade_strength">Fade Strength</string>
+    <string name="top_drop">Top Drop</string>
+    <string name="bottom_drop">Bottom Drop</string>
+    <string name="start_drop">Start Drop</string>
+    <string name="end_drop">End Drop</string>
 </resources>
